--- a/src/styles/Actions.css
+++ b/src/styles/Actions.css
@@ -38,9 +38,9 @@
 }
 
 .stop {
-  background-color: rgb(131, 23, 71);
+  background-color: #831747;
 }
 
 .reset {
-  background-color: rgb(131, 23, 71);
+  background-color: #831747;
 }
