--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgb(116, 32, 70);
+  background-color: #742046;
   color: rgb(255, 255, 255);
   border-radius: 5px 5px 0 0;
   margin: 0px;
